[gd_scene load_steps=2 format=3 uid="uid://ck2njkhnh27n6"]

[ext_resource type="Script" path="res://ui/parameter_settings.gd" id="1_xuxag"]

[node name="ParameterSettings" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xuxag")

[node name="ParameterName" type="Label" parent="."]
layout_mode = 2
text = "Parameter"

[node name="ParameterValue" type="LineEdit" parent="."]
layout_mode = 2
text = "fda"

[connection signal="text_changed" from="ParameterValue" to="." method="_on_parameter_value_text_changed"]
